# beets-bitrater

./: .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml
beetsplug/bitrater/: __init__.py  analyzer.py  classifier.py  confidence.py  constants.py  cutoff_detector.py  file_analyzer.py  plugin.py  spectrum.py  transcode_detector.py  types.py
beetsplug/bitrater/training_data/: feature_cache.py  transcode.py
bitrater/: __init__.py  analyzer.py  classifier.py  cli.py  confidence.py  constants.py  file_analyzer.py  spectrum.py  transcode.py  types.py
docs/plans/: 2025-01-12-joblib-parallelism-design.md  2025-12-08-transcode-detection-design.md  2025-12-08-transcode-detection-impl.md  2025-12-11-encoder-agnostic-features.md  2025-12-12-paper-alignment.md  2025-12-12-ultrasonic-features.md  2026-02-06-gpu-acceleration-deferred.md
documents/: accuracy_assessment_2025-06-28.md
reference_docs/: Mp3_bit_rate_quality_detection_through_frequency_s.txt
scripts/: test_raw_mdct.py  validate_features.py
tests/: conftest.py  test_analyzer.py  test_analyzer_coverage.py  test_classifier.py  test_cli.py  test_collect_training_data.py  test_confidence.py  test_cutoff_detector.py  test_feature_cache.py  test_feature_cache_format.py  test_file_analyzer.py  test_file_analyzer_coverage.py  test_integration.py  test_model_version.py  test_parallel_training.py  test_plugin.py  test_plugin_no_print.py  test_psd_cache.py  test_spectrum.py  test_spectrum_coverage.py  test_threading.py  test_transcode.py  test_transcode_detector.py
